test/runnable/logging.crow
main nat^(_ string[]) summon
	info log "Logged once"
	lh = get-log-handler
	doubler log-handler = logged =>
		lh[logged]
		lh[logged]
	doubler with-log-handler () =>
		warn log "Logged twice"
	(_ => ()) with-log-handler () =>
		warn log "Logged never"
	()
