test/compile-errors/literal-does-not-match-expected-type.crow
main nat^(_ string[]) summon
	_ string = 0
	()
